--- a/README.org
+++ b/README.org
@@ -31,7 +31,8 @@
    Using MHC, you can easily import schedule articles from emails.
 
    You can get the latest version from:
-    http://www.quickhack.net/mhc/
+   + https://github.com/yoshinari-nomura/mhc
+   + http://www.quickhack.net/mhc
 
    MHC has following features:
 
@@ -41,19 +42,8 @@
      appoint-emails. MHC will guess the title,
      date, time and description by scanning the email.
    + Simple data structure allows you to manipulate stored data in many ways.
-   + Both UNIX and Windows support.
    + Appointments can be made to repeat in flexible ways.
    + powerful but simple expression of appointments.
-     Each appointment can have following attributes:
-
-       date, subject, start/end time(not mandatory),
-       advance time of alarm,
-       multiple categories,
-       recurrence rules,
-       duration of the recurrence,
-       list of exception dates,
-       list of extra dates
-       description.
 
    MHC stores schedule articles in the same form of MH; you can manipulate
    these messages not only by above tools but also by many other MUAs,
@@ -109,12 +99,8 @@
 
    5) Check if TODAY is good.
       #+BEGIN_SRC shell-script
+        $ export MHC_TZINFO="Asia/Tokyo"
         $ ~/src/mhc/bin/mhc scan today
       #+END_SRC
 
    You may add ~/src/mhc/bin directory your $PATH for dogfooding
-
-** FOR MORE INFORMATION:
-   Please visit our site:
-   http://www.quickhack.net/mhc/
-   https://github.com/yoshinari-nomura/mhc
