--- a/README.org
+++ b/README.org
@@ -60,7 +60,7 @@
    #+BEGIN_SRC shell-script
      $ mkdir /path/to/install/mhc
      $ cd /path/to/install/mhc
-     $ bunlde init
+     $ bundle init
      $ echo 'gem "mhc"' >> Gemfile
      $ bundle install --path=vendor/bundle --binstubs=bin
      $ export PATH=/path/to/install/mhc/bin:$PATH
